objects/ACP_Section_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ACP_Application_Breakdown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To show/hide Application Breakdown block in account plan</description>
        <inlineHelpText>Check this to show/hide Application Breakdown block in account plan</inlineHelpText>
        <label>Application Breakdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACP_Application__c</fullName>
        <description>To define values for Application field in top open opportunity</description>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Application</fullName>
                    <isActive>false</isActive>
                    <label>Application</label>
                </value>
                <value>
                    <fullName>Application Segment</fullName>
                </value>
                <value>
                    <fullName>DND Application</fullName>
                </value>
                <value>
                    <fullName>Platform Name</fullName>
                </value>
                <value>
                    <fullName>Project Platform</fullName>
                </value>
                <value>
                    <fullName>Tender</fullName>
                    <isActive>false</isActive>
                    <label>Tender</label>
                </value>
                <value>
                    <fullName>Tender Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Conversion_current_YTD__c</fullName>
        <description>To Store Conversion - (current YTD) Report</description>
        <inlineHelpText>Please add report ID</inlineHelpText>
        <label>Conversion - (current YTD) Report Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Field_Set_1__c</fullName>
        <inlineHelpText>Fieldset name for Supplier Evaluation table</inlineHelpText>
        <label>Field Set for Rating Table</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Field_Set_Name__c</fullName>
        <defaultValue>$User.Alias</defaultValue>
        <description>To store Field set name to display a different set of fields in the account plan pages.</description>
        <label>Field Set Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Header_BG_Color__c</fullName>
        <description>Ritika 06/19/17 – Created for Account Plan</description>
        <label>Header Background Color</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Header_Font_Color__c</fullName>
        <description>Ritika 06/19/17 – Created for Account Plan</description>
        <label>Header Font Color</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Header_Label__c</fullName>
        <description>Ritika 06/19/17 – Created for Account Plan</description>
        <label>Header Label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_L12M_Lost_1Yvalue__c</fullName>
        <description>To Store L12M Lost - (1Yvalue) Report Id</description>
        <inlineHelpText>Please add report Id</inlineHelpText>
        <label>L12M Lost - (1Yvalue) Report Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_L12M_Won_1Y_Value__c</fullName>
        <description>To store L12M Won - (1Y Value) report Id</description>
        <inlineHelpText>To store report Id</inlineHelpText>
        <label>L12M Won - (1Y Value) Report Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Label_1__c</fullName>
        <description>Ritika 11/23/17 – Created to store label 1</description>
        <label>Label 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Label_2__c</fullName>
        <description>Ritika 11/23/17 – Created to store label 2</description>
        <label>Label 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Label_3__c</fullName>
        <description>Ritika 11/23/17 – Created to store label 3</description>
        <label>Label 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Market_and_Competition_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Show / Hide Market and Competition Detail Block in account plan.</description>
        <inlineHelpText>Check this to show/hide Market and Competition Detail Block in account plan.</inlineHelpText>
        <label>Market and Competition Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACP_Market_and_Competition_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO show/hide Market &amp; Competition Summary block in account plan</description>
        <inlineHelpText>Check to show/hide Market &amp; Competition Summary block in account plan</inlineHelpText>
        <label>Market and Competition Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACP_No_Of_Records__c</fullName>
        <description>Ritika 06/19/17 – Created for Account Plan</description>
        <label>Number of Records To show</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_No_Reds_Exe_Rel__c</fullName>
        <description>To store max no of records for executive relationship table.</description>
        <label>No of Records Executive Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Num_Rerds_Eng_Rel__c</fullName>
        <label>Num of Records Engineering Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Num_of_Rcds_Pur_Rel__c</fullName>
        <description>To Store max no of records for purchasing relationship.</description>
        <label>Num of Records Purchasing Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_Object_Reference__c</fullName>
        <description>Ritika 06/19/17 – Created for Account Plan</description>
        <label>Object Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Pipeline_4Q_Rolling__c</fullName>
        <description>To store Pipeline 4Q Rolling Report Id</description>
        <inlineHelpText>Please add the report Id.</inlineHelpText>
        <label>Pipeline 4Q Rolling Report Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Product_CBC__c</fullName>
        <description>Helps to determine the CBCs for a particular BU</description>
        <label>Product CBC</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CBC 1</fullName>
                </value>
                <value>
                    <fullName>CBC 2</fullName>
                </value>
                <value>
                    <fullName>CBC 3</fullName>
                </value>
                <value>
                    <fullName>CBC 4</fullName>
                </value>
                <value>
                    <fullName>CBC 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Project_1__c</fullName>
        <description>Hari Created to store Project 1 Label</description>
        <label>Project 1 Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Project_2__c</fullName>
        <description>To Store Project 2 Label</description>
        <label>Project 2 Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Project_3__c</fullName>
        <description>To store project 3 label</description>
        <label>Project 3 Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Setting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Ritika 06/19/17 – Created for Account Plan</description>
        <label>ACP_Setting</label>
        <referenceTo>ACP_Setting__c</referenceTo>
        <relationshipName>ACP_Section_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACP_Show_TAM_LY_CY_NY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show TAM LY,CY,NY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACP_TAM_PAM_SAM_Billing__c</fullName>
        <label>TAM/PAM/SAM Billing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LY Bill</fullName>
                </value>
                <value>
                    <fullName>CY BIll(RR)</fullName>
                </value>
                <value>
                    <fullName>NY Fcst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Overview_2nd_Row__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To determine whether the 2nd row of Customer Overview is shown on the Account Plan</description>
        <label>Customer Overview 2nd Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Sort_Order__c</fullName>
        <inlineHelpText>API Name - Example - createdDate desc</inlineHelpText>
        <label>Default Sort Order</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Tree_Units__c</fullName>
        <label>Growth Tree Units ($M/$K)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Millions (USD)</fullName>
                </value>
                <value>
                    <fullName>Thousands (USD)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>CMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_and_Growth_Plan_Year_1__c</fullName>
        <label>Revenue and Growth Plan Year 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_and_Growth_Plan_Year_2__c</fullName>
        <label>Revenue and Growth Plan Year 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_and_Growth_Plan_Year_3__c</fullName>
        <label>Revenue and Growth Plan Year 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Table__c</fullName>
        <label>Table</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Table</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ACP Section Detail</label>
    <nameField>
        <label>ACP Section Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACP Section Details</pluralLabel>
    <recordTypes>
        <fullName>ACP_Account_Plan_Header</fullName>
        <active>true</active>
        <description>To Define settings for Account Plan Header Block in account plan</description>
        <label>Account Plan Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACP_Application_Breakdown</fullName>
        <active>true</active>
        <description>To Define settings for Application Breakdown Block in account plan</description>
        <label>Application Breakdown</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACP_Market_and_Competition</fullName>
        <active>true</active>
        <description>This will control the visibility of Market &amp; Competition related blocks &amp; other settings in Account Plan</description>
        <label>Market and Competition</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACP_Mkt_Comptn_Summary</fullName>
        <active>true</active>
        <description>To Define settings for Market &amp; Competition Summary Block in account plan</description>
        <label>Market and Competition Summary</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACP_Opportunity_TAM_Revenue</fullName>
        <active>true</active>
        <description>To Define settings for Opportunity TAM Vs Revenue Block in account plan</description>
        <label>Opportunity TAM Revenue</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACP_Stakeholder_and_Relationship</fullName>
        <active>true</active>
        <description>This is for the Settings Detail Records for the Stakeholder and Relationship Section of the Account Plan.</description>
        <label>Stakeholder and Relationship</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACP_Top_Open_Opportunities</fullName>
        <active>true</active>
        <description>To Define settings for Top Open Opportunities Block in account plan</description>
        <label>Top Open Opportunities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Overview</fullName>
        <active>true</active>
        <description>For the Settings Details for the Customer Overview Section of the Account Plan</description>
        <label>Customer Overview</label>
    </recordTypes>
    <recordTypes>
        <fullName>Strategy</fullName>
        <active>true</active>
        <description>To Define settings for Strategy Block in account plan</description>
        <label>Strategy</label>
    </recordTypes>
    <recordTypes>
        <fullName>TE_Business_Performance</fullName>
        <active>true</active>
        <description>This is for the Settings Detail Records for the TE Business Performance Section of the Account Plan.</description>
        <label>TE Business Performance</label>
    </recordTypes>
    <recordTypes>
        <fullName>TE_Supplier_Evaluation</fullName>
        <active>true</active>
        <description>To Define settings for Supplier Evaluation Block in account plan</description>
        <label>TE Supplier Evaluation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>